DevTools: Fix storage handler host-setting

Fixes issue where clearDataForOrigin returned InternalError.

BUG=677545

Review-Url: https://codereview.chromium.org/2608793002
Cr-Commit-Position: refs/heads/master@{#440986}

Former-commit-id: b2320b5dcc4882ca28f9211b141c03843c07a17d